--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
             </div>
             <div class="row">
                 <div class="col-xs-6 bg-text text-center">Experienced professional with an entrepreneurship approach and a unique combination of technical expertise, design and production support to deliver and implement a mission-critical software systems. Significant experience with Microsoft
-                    SharePoint, JavaScript, JQuery, Oracle, SQL, HTML, CSS, C#, .NET, Angular, Node, Microsoft technology and business system.
+                    SharePoint, PHP, JavaScript, JQuery, Oracle, SQL, HTML, CSS, C#, .NET, Angular, Node, Microsoft technology and business system.
                 </div>
-                <div class="col-xs-6"><img src="https://github.com/uzotex/FCC/blob/master/uzo2.jpg?raw=true" class="img-circle"></div>
+                
             </div>
         </div>
 
